# myGboosting

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: iris.scv  sample.csv
src/: csv.h  main.cpp  model.proto
src/algo/: binarization.cpp  binarization.h  defines.h  histogram.cpp  histogram.h  model.cpp  model.h  pool.cpp  pool.h  split.cpp  split.h  tree.cpp  tree.h
src/lib/: csv.h
src/modes/: predict.cpp  predict.h  train.cpp  train.h
src/proto/: CMakeLists.txt  model.pb.cc  model.pb.h  model.proto
testing/: .gitignore  simple_test.py  xgboost_ligthgbm_facebook.ipynb
testing/.ipynb_checkpoints/: xgboost_ligthgbm_facebook-checkpoint.ipynb
testing/FacebookCommentVolumeDataset/: test.csv
testing/datasets/CreditCardFraud/: get_dataset.sh
testing/datasets/FacebookCommentVolumeDataset/: .gitignore  README.md  column_names.csv
testing/datasets/sklearn_diabetes/: column_names.csv  data.csv
