cmake_minimum_required(VERSION 3.7)
project(myGboosting)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
message(${PROJECT_SOURCE_DIR})

include_directories(${PROJECT_SOURCE_DIR})
file(GLOB_RECURSE CURRENT_SOURCE_FILES
    ${PROJECT_SOURCE_DIR}/*.cpp
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hxx)

message(${CURRENT_SOURCE_FILES})

set(SOURCE_FILES ${SOURCE_FILES} ${CURRENT_SOURCE_FILES})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${CMAKE_CXX_STANDARD} -Wall -Wextra -Wpedantic")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_executable(myGboosting ${SOURCE_FILES})